--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div style="width: 50%;">
 
-        <h1>Enter Three Angles</h1>
+        <h1>Enter 3 Angles</h1>
         <input type="text" id="angle1" placeholder="Angle A">
         <input type="text" id="angle2" placeholder="Angle B">
         <input type="text" id="angle3" placeholder="Angle C">
